# tomas-bot

./: .env.example  .gitignore  README.md  bot.go  go.mod  go.sum  package-lock.json  package.json  pyproject.toml  tsconfig.json
bot/: __main__.py
src/: index.ts  utils.ts
